--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "coverage": "react-scripts test --coverage --env=jsdom"
+    "coverage": "react-scripts test --coverage --watchAll=false --env=jsdom"
   },
   "eslintConfig": {
     "extends": "react-app"
